@@ -31,6 +31,26 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -268,6 +288,26 @@ name|dbEntity
 argument_list|)
 throw|;
 block|}
+name|ColumnDescriptor
+index|[]
+name|columns
+init|=
+name|descriptor
+operator|.
+name|getColumns
+argument_list|()
+decl_stmt|;
+name|Set
+argument_list|<
+name|DbAttribute
+argument_list|>
+name|addedAttributes
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
 name|int
 index|[]
 name|pk
@@ -278,23 +318,15 @@ index|[
 name|len
 index|]
 decl_stmt|;
-name|ColumnDescriptor
-index|[]
-name|columns
+name|int
+name|index
 init|=
-name|descriptor
-operator|.
-name|getColumns
-argument_list|()
+literal|0
 decl_stmt|;
 for|for
 control|(
 name|int
 name|i
-init|=
-literal|0
-init|,
-name|j
 init|=
 literal|0
 init|;
@@ -334,15 +366,30 @@ name|a
 operator|.
 name|isPrimaryKey
 argument_list|()
+operator|&&
+operator|!
+name|addedAttributes
+operator|.
+name|contains
+argument_list|(
+name|a
+argument_list|)
 condition|)
 block|{
 name|pk
 index|[
-name|j
+name|index
 operator|++
 index|]
 operator|=
 name|i
+expr_stmt|;
+name|addedAttributes
+operator|.
+name|add
+argument_list|(
+name|a
+argument_list|)
 expr_stmt|;
 block|}
 block|}
