@@ -209,6 +209,20 @@ name|cayenne
 operator|.
 name|exp
 operator|.
+name|ExpressionFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|exp
+operator|.
 name|property
 operator|.
 name|EntityProperty
@@ -7422,6 +7436,125 @@ name|startsWith
 argument_list|(
 literal|"artist"
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test2PkSelect
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|results
+init|=
+name|ObjectSelect
+operator|.
+name|columnQuery
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|,
+name|PropertyFactory
+operator|.
+name|createSelf
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|PropertyFactory
+operator|.
+name|createBase
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|dbPathExp
+argument_list|(
+literal|"paintingArray.toArtist.ARTIST_ID"
+argument_list|)
+argument_list|,
+name|Integer
+operator|.
+name|class
+argument_list|)
+argument_list|)
+operator|.
+name|where
+argument_list|(
+name|Artist
+operator|.
+name|ARTIST_ID_PK_PROPERTY
+operator|.
+name|eq
+argument_list|(
+literal|1L
+argument_list|)
+argument_list|)
+operator|.
+name|pageSize
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|results
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"artist1"
+argument_list|,
+operator|(
+operator|(
+name|Artist
+operator|)
+name|results
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+index|[
+literal|0
+index|]
+operator|)
+operator|.
+name|getArtistName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+index|[
+literal|1
+index|]
 argument_list|)
 expr_stmt|;
 block|}
